--- a/src/app/material-component/product/product.component.html
+++ b/src/app/material-component/product/product.component.html
@@ -1,5 +1,5 @@
 <h1>
-	<mat-card style="background-color: rgb(0, 143, 230); color: white;" align="center">Products</mat-card>
+	<mat-card style="background-color: rgb(0, 143, 230); color: white;" align="center">Lists Des Donations</mat-card>
 </h1>
 <div class="container">
 
@@ -10,7 +10,7 @@
 			<div class="top-table">
 				<input class="filter-prd-form" (keyup)="filterProductTable($event.target.value)"
 					placeholder="Search Product">
-				<button (click)="addProduct()" class=" add-prd">ADD</button>
+				<button (click)="addProduct()" class=" add-prd">Fait Donation</button>
 			</div>
 
 			<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
@@ -19,12 +19,7 @@
         The actual rendered columns are set as a property on the row definition" -->
 
 				<!-- Position Column -->
-				<ng-container matColumnDef="id">
-					<th mat-header-cell *matHeaderCellDef>
-						ID
-					</th>
-					<td mat-cell *matCellDef="let element"> {{element.id}} </td>
-				</ng-container>
+				
 
 				<!-- Name Column -->
 				<ng-container matColumnDef="name">
@@ -32,6 +27,20 @@
 						Name
 					</th>
 					<td mat-cell *matCellDef="let element"> {{element.name}} </td>
+				</ng-container>
+
+				<ng-container matColumnDef="phone">
+					<th mat-header-cell *matHeaderCellDef>
+						Phone
+					</th>
+					<td mat-cell *matCellDef="let element"> {{element.phone}} </td>
+				</ng-container>
+
+				<ng-container matColumnDef="type">
+					<th mat-header-cell *matHeaderCellDef>
+						Type
+					</th>
+					<td mat-cell *matCellDef="let element"> {{element.donation_type}}</td>
 				</ng-container>
 
 				<ng-container matColumnDef="quantity">
@@ -42,12 +51,7 @@
 				</ng-container>
 
 				<!-- Symbol Column -->
-				<ng-container matColumnDef="price">
-					<th mat-header-cell *matHeaderCellDef>
-						Price
-					</th>
-					<td mat-cell *matCellDef="let element"> {{element.price | currency}}</td>
-				</ng-container>
+				
 
 				<ng-container matColumnDef="delete">
 					<th mat-header-cell *matHeaderCellDef>
