add donation par Type

--- a/src/app/material-component/product/product.component.html
+++ b/src/app/material-component/product/product.component.html
@@ -9,7 +9,7 @@
 
 			<div class="top-table">
 				<input class="filter-prd-form" (keyup)="filterProductTable($event.target.value)"
-					placeholder="Search Product">
+					placeholder="Search name">
 				<button (click)="addProduct()" class=" add-prd">Fait Donation</button>
 			</div>
 
