--- a/src/app/material-component/pending-orders/pending-orders.component.html
+++ b/src/app/material-component/pending-orders/pending-orders.component.html
@@ -1,5 +1,5 @@
 <h1>
-    <mat-card style="background-color: rgb(0, 143, 230); color: white;" align="center">Pending Orders
+    <mat-card style="background-color: rgb(0, 143, 230); color: white;" align="center">Donation Par Type
     </mat-card>
 </h1>
 <div class="container">
@@ -10,7 +10,7 @@
 
             <div class="top-table">
                 <input class="filter-prd-form" (keyup)="filterProductTable($event.target.value)"
-                    placeholder="Search Product">
+                    placeholder="Search type">
                 <!-- <button (click)="addProduct()" class=" add-prd">ADD</button> -->
             </div>
             <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
@@ -19,93 +19,26 @@
         The actual rendered columns are set as a property on the row definition" -->
 
                 <!-- Position Column -->
-                <ng-container matColumnDef="orderId">
+               
+
+                <ng-container matColumnDef="type">
                     <th mat-header-cell *matHeaderCellDef>
-                        Order ID
+                        Type
                     </th>
-                    <td mat-cell *matCellDef="let element"> {{element.id}} </td>
-                </ng-container>
-
-                <ng-container matColumnDef="orderDate">
-                    <th mat-header-cell *matHeaderCellDef>
-                        Order Date
-                    </th>
-                    <td mat-cell *matCellDef="let element"> {{element.orderDate}} </td>
-                </ng-container>
-
-                <!-- Name Column -->
-                <ng-container matColumnDef="firstName">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                        First Name
-                    </th>
-                    <td mat-cell *matCellDef="let element"> {{element.customerFirstName}} </td>
-                </ng-container>
-
-                <ng-container matColumnDef="lastName">
-                    <th mat-header-cell *matHeaderCellDef mat-sort-header>
-                        Last Name
-                    </th>
-                    <td mat-cell *matCellDef="let element"> {{element.customerLastName}} </td>
-                </ng-container>
-
-                <ng-container matColumnDef="phone">
-                    <th mat-header-cell *matHeaderCellDef>
-                        Phone
-                    </th>
-                    <td mat-cell *matCellDef="let element"> {{element.customerPhoneNumber}} </td>
+                    <td mat-cell *matCellDef="let element"> {{element.donationType}} </td>
                 </ng-container>
 
                 <!-- Symbol Column -->
-                <ng-container matColumnDef="status">
+                <ng-container matColumnDef="quantity">
                     <th mat-header-cell *matHeaderCellDef>
-                        Status
+                        Quantity
                     </th>
-                    <td mat-cell *matCellDef="let element"> {{element.status}}</td>
+                    <td mat-cell *matCellDef="let element"> {{element.totalQuantity}}</td>
                 </ng-container>
 
-                <ng-container matColumnDef="edit">
-                    <th mat-header-cell *matHeaderCellDef>
-                        Edit
-                    </th>
-                    <td mat-cell *matCellDef="let element">
-                        <button (click)="editOrder(element)" mat-button color="primary">
-                            <span class="material-icons">edit</span>
-                        </button>
-                    </td>
-                </ng-container>
+                
 
-                <ng-container matColumnDef="view">
-                    <th mat-header-cell *matHeaderCellDef>
-                        View
-                    </th>
-                    <td mat-cell *matCellDef="let element">
-                        <button (click)="viewOrder(element.id)" mat-button color="primary">
-                            <span class="material-icons">preview</span>
-                        </button>
-                    </td>
-                </ng-container>
-
-                <ng-container matColumnDef="print_confirm">
-                    <th mat-header-cell *matHeaderCellDef>
-                        Print Confirm
-                    </th>
-                    <td mat-cell *matCellDef="let element">
-                        <button (click)="printOrderById(element.id)" mat-button color="primary">
-                            <span class="material-icons">print</span>
-                        </button>
-                    </td>
-                </ng-container>
-
-                <ng-container matColumnDef="delete">
-                    <th mat-header-cell *matHeaderCellDef>
-                        Delete
-                    </th>
-                    <td mat-cell *matCellDef="let element">
-                        <button (click)="removeSelectedRows(element.id)" mat-button color="warn">
-                            <span class="material-icons">delete</span>
-                        </button>
-                    </td>
-                </ng-container>
+                
 
                 <tr style="background-color: #030203c9;" mat-header-row *matHeaderRowDef="displayedColumns"></tr>
                 <tr id="prdTableHover" mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
