removed returns module as it is no longer being used

--- a/src/app/material-component/product/product.component.html
+++ b/src/app/material-component/product/product.component.html
@@ -10,7 +10,7 @@
 			<div class="top-table">
 				<input class="filter-prd-form" (keyup)="filterProductTable($event.target.value)"
 					placeholder="Search name">
-				<button (click)="addProduct()" class=" add-prd">Fait Donation</button>
+				<!-- <button (click)="addProduct()" class=" add-prd">Fait Donation</button> -->
 			</div>
 
 			<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
