more refactoring by removing unused code

--- a/src/app/donation/home/home.component.html
+++ b/src/app/donation/home/home.component.html
@@ -9,10 +9,7 @@
 		<!--	Right side of screen -->
 		<div class="col">
 		
-			<!-- Customer Information Form -->
-<!-- 			<app-customer-info></app-customer-info> -->
-
-		<h2 class="jumbotron text-center">Customer Information</h2>
+		<h2 class="jumbotron text-center">Donations</h2>
 
 			<form [formGroup]="userForm" novalidate>
 				<!-- <form [formGroup]="userForm" (ngSubmit)="onSubmit()" novalidate> -->
