--- a/src/app/material-component/add-customer/add-customer.component.html
+++ b/src/app/material-component/add-customer/add-customer.component.html
@@ -1,4 +1,4 @@
-<h2 id="title-id" mat-dialog-title align="center">
+<!-- <h2 id="title-id" mat-dialog-title align="center">
     {{customer.showedSaveOrUpdate}} Customer Infos
 </h2>
 <mat-dialog-content class="mat-typography">
@@ -57,4 +57,4 @@
     <button mat-raised-button color="primary" [disabled]='!customer.firstName' [mat-dialog-close]="customer">
         {{customer.showedSaveOrUpdate}}
     </button>
-</mat-dialog-actions>
+</mat-dialog-actions> -->
