--- a/src/app/material-component/product/product.component.html
+++ b/src/app/material-component/product/product.component.html
@@ -1,5 +1,7 @@
 <h1>
-	<mat-card style="background-color: rgb(0, 143, 230); color: white;" align="center">Lists Des Donations</mat-card>
+	<mat-card style="background-color: rgb(0, 143, 230); color: white;" align="center">
+		Donors
+	</mat-card>
 </h1>
 <div class="container">
 
