added a component for recipients

--- a/src/app/donation/recipient/recipient.component.html
+++ b/src/app/donation/recipient/recipient.component.html
@@ -1,1 +1,87 @@
-<p>recipient works!</p>
+<h1>
+	<mat-card style="background-color: rgb(0, 143, 230); color: white;" align="center">
+		Recipients
+	</mat-card>
+</h1>
+<div class="container">
+
+	<div class="row">
+
+		<div class="col">
+
+			<div class="top-table">
+				<input class="filter-prd-form" (keyup)="filterProductTable($event.target.value)"
+					placeholder="Search name">
+				<!-- <button (click)="addProduct()" class=" add-prd">Fait Donation</button> -->
+			</div>
+
+			<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
+
+				<!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
+
+				<!-- Position Column -->
+				
+
+				<!-- Name Column -->
+				<ng-container matColumnDef="name">
+					<th mat-header-cell *matHeaderCellDef mat-sort-header>
+						Name
+					</th>
+					<td mat-cell *matCellDef="let element"> {{element.name}} </td>
+				</ng-container>
+
+				<ng-container matColumnDef="phone">
+					<th mat-header-cell *matHeaderCellDef>
+						Phone
+					</th>
+					<td mat-cell *matCellDef="let element"> {{element.phone}} </td>
+				</ng-container>
+
+				<ng-container matColumnDef="type">
+					<th mat-header-cell *matHeaderCellDef>
+						Type
+					</th>
+					<td mat-cell *matCellDef="let element"> {{element.donation_type}}</td>
+				</ng-container>
+
+				<ng-container matColumnDef="quantity">
+					<th mat-header-cell *matHeaderCellDef>
+						Quantity
+					</th>
+					<td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
+				</ng-container>
+
+				<!-- Symbol Column -->
+				
+
+				<ng-container matColumnDef="delete">
+					<th mat-header-cell *matHeaderCellDef>
+						Delete
+					</th>
+					<td mat-cell *matCellDef="let element">
+						<button (click)="removeSelectedRows(element.id)" mat-button color="warn">
+							<span class="material-icons">delete</span>
+						</button>
+					</td>
+				</ng-container>
+
+				<ng-container matColumnDef="update">
+					<th mat-header-cell *matHeaderCellDef>
+						Edit
+					</th>
+					<td mat-cell *matCellDef="let element">
+						<button (click)="editProduct(element.id)" mat-button color="primary">
+							<span class="material-icons">edit</span>
+						</button>
+					</td>
+				</ng-container>
+
+				<tr style="background-color: #030203c9;" mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+				<tr id="prdTableHover" mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+			</table>
+			<mat-paginator [length]="100" [pageSize]="5" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page">
+			</mat-paginator>
+		</div>
+	</div>
+</div>
