--- a/src/app/donation/home/home.component.html
+++ b/src/app/donation/home/home.component.html
@@ -1,87 +1,51 @@
-<!-- https://getbootstrap.com/docs/5.0/layout/columns/ -->
-<!-- https://material.angular.io/components/select/overview -->
-<!-- https://www.itsolutionstuff.com/post/angular-select-dropdown-exampleexample.html -->
-
+<h1>
+    <mat-card style="background-color: rgb(0, 143, 230); color: white;" align="center">
+		Donations
+    </mat-card>
+</h1>
 <div class="container">
 
-	<div class="row justify-content-start">
+    <div class="row">
 
-		<!--	Right side of screen -->
-		<div class="col">
-		
-		<h2 class="jumbotron text-center">Donations</h2>
+        <div class="col">
 
-			<form [formGroup]="userForm" novalidate>
-				<!-- <form [formGroup]="userForm" (ngSubmit)="onSubmit()" novalidate> -->
+            <div class="top-table">
+                <input class="filter-prd-form" (keyup)="filterProductTable($event.target.value)"
+                    placeholder="Search type">
+                <!-- <button (click)="addProduct()" class=" add-prd">ADD</button> -->
+            </div>
+            <table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
 
-				<div class="row justify-content-start">
+                <!--- Note that these columns can be defined in any order.
+        The actual rendered columns are set as a property on the row definition" -->
 
-					<div class="col">
-						<div class="form-group">
-							<label>First Name</label> <input type="text" class="form-control"
-								formControlName="firstName">
-							<div
-								*ngIf="getControl.firstName.touched && getControl.firstName.invalid"
-								class="text-danger">
-								<div *ngIf="getControl.firstName.errors.required">First
-									Name is required.</div>
-								<div *ngIf="getControl.firstName.errors?.minlength">Minimum
-									4 character are required.</div>
-							</div>
-						</div>
-					</div>
+                <!-- Position Column -->
 
-					<div class="col">
-						<div class="form-group">
-							<label>Last Name</label> <input type="text" class="form-control"
-								formControlName="lastName">
-							<div
-								*ngIf="getControl.lastName.touched && getControl.lastName.invalid"
-								class="text-danger">
-								<div *ngIf="getControl.lastName.errors.required">Last Name
-									is required.</div>
-								<div *ngIf="getControl.lastName.errors?.minlength">Minimum
-									4 character are required.</div>
-							</div>
-						</div>
-					</div>
 
-				</div>
+                <ng-container matColumnDef="type">
+                    <th mat-header-cell *matHeaderCellDef>
+                        Type
+                    </th>
+                    <td mat-cell *matCellDef="let element"> {{element.donationType}} </td>
+                </ng-container>
 
-				<div class="row justify-content-start">
+                <!-- Symbol Column -->
+                <ng-container matColumnDef="quantity">
+                    <th mat-header-cell *matHeaderCellDef>
+                        Quantity
+                    </th>
+                    <td mat-cell *matCellDef="let element"> {{element.totalQuantity}}</td>
+                </ng-container>
 
-					<div class="col">
-						<div class="form-group">
-							<label>Address</label>
-							<textarea type="text" class="form-control"
-								formControlName="address"></textarea>
-						</div>
-					</div>
 
-					<div class="col">
-						<div class="form-group">
-							<label>Phone</label> <input type="text" class="form-control"
-								formControlName="phone">
-							<div *ngIf="getControl.phone.touched && getControl.phone.invalid"
-								class="text-danger">
-								<div *ngIf="getControl.phone.errors.required">Phone is
-									required.</div>
-							</div>
-						</div>
-					</div>
 
-				</div>
 
-				<hr />
 
-				<!-- 		Only make visible when in edit mode. Clear form and redirect to pending-orders -->
-				<button class="btn btn-danger" *ngIf="!this.isAddMode" type="submit"
-					(click)="cancel()">Cancel</button>
-
-			</form>
-
-		</div>
-
-	</div>
-
+                <tr style="background-color: #030203c9;" mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+                <tr id="prdTableHover" mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+            </table>
+            <mat-paginator [length]="100" [pageSize]="5" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page">
+            </mat-paginator>
+        </div>
+    </div>
 </div>
