--- a/src/app/donation/donor/donor.component.css
+++ b/src/app/donation/donor/donor.component.css
@@ -1,43 +1,13 @@
-table {
-    width: 100%;
-  }
-  
-  .filter-prd-form {
-    min-width: 150px;
-    max-width: 300px;
-    width: 100%;
-    height: 40px;
-   text-decoration: none;
-   border-color: black;
-  }
-  
-  
-  .example-full-width {
-    width: 100%;
-  }
-  
-  .add-prd{
-    height: 40px;
-    width: 80px;
-    border: none;
-    color: white;
-    background-color: #030203c9;
-    font-family: sans-serif;
-  }
-  
-  .top-table{
-    display: flex;
-  }
-  
-  #prdTableHover:hover{
-    background-color: #050405c9;
-  }
-  
-  th{
-    color: white;
-  }
-  
-  td {
-    color: white;
-    background-color: #110625c9;
-  }
+/* .example-container{
+    text-align: center
+}
+
+.form-container{
+    width: 400 px; 
+    margin: 0 px auto; 
+    margin-top: 200 px
+}
+
+.form-field{
+    display: block
+} */
