refactoring by replacing components or classes that are not aptly named

--- a/src/app/donation/donor/donor.component.html
+++ b/src/app/donation/donor/donor.component.html
@@ -4,6 +4,8 @@
 
 		<div class="col-md-6 offset-md-3"> <!-- Center the column in the row -->
 
+			<h1>Add Donor</h1>
+
 			<div class="register-form border p-4 rounded shadow bg-white">
 
 				<form [formGroup]="userForm" (ngSubmit)="onSubmit()">
