--- a/src/app/donation/recipient/recipient.component.html
+++ b/src/app/donation/recipient/recipient.component.html
@@ -1,87 +1,80 @@
-<h1>
-	<mat-card style="background-color: rgb(0, 143, 230); color: white;" align="center">
-		Recipients
-	</mat-card>
-</h1>
-<div class="container">
+<div class="container d-flex justify-content-center align-items-center" style="min-height: 100vh;">
 
-	<div class="row">
+	<div class="row w-100">
 
-		<div class="col">
+		<div class="col-md-6 offset-md-3"> <!-- Center the column in the row -->
 
-			<div class="top-table">
-				<input class="filter-prd-form" (keyup)="filterProductTable($event.target.value)"
-					placeholder="Search name">
-				<!-- <button (click)="addProduct()" class=" add-prd">Fait Donation</button> -->
+			<h1>Add Recipient</h1>
+
+			<div class="register-form border p-4 rounded shadow bg-white">
+
+				<form [formGroup]="userForm" (ngSubmit)="onSubmit()">
+
+					<mat-form-field class="form-field" appearance="outline">
+						<mat-label> First Name
+						</mat-label>
+						<input matInput formControlName="firstName" required>
+						<mat-error *ngIf="userForm.controls.firstName.touched && userForm.controls.firstName.invalid">
+							<span *ngIf="userForm.controls.firstName.errors.required">This field is mandatory.</span>
+							<span *ngIf="userForm.controls.firstName.errors.pattern">This field is invalid.</span>
+						</mat-error>
+					</mat-form-field>
+
+					<mat-form-field class="form-field" appearance="outline">
+						<mat-label> Last Name
+						</mat-label>
+						<input matInput formControlName="lastName" required>
+						<mat-error *ngIf="userForm.controls.lastName.touched && userForm.controls.lastName.invalid">
+							<span *ngIf="userForm.controls.lastName.errors.required">This field is mandatory.</span>
+							<span *ngIf="userForm.controls.lastName.errors.pattern">This field is invalid.</span>
+						</mat-error>
+					</mat-form-field>
+
+					<div class="row">
+						<div class="col-md-6">
+							<mat-form-field appearance="fill">
+								<mat-label>Country Code</mat-label>
+								<mat-select formControlName="selectedCountryCode">
+									<mat-option *ngFor="let country of countries" [value]="country.dialCode">
+										{{ country.name }} ({{ country.dialCode }})
+									</mat-option>
+								</mat-select>
+							</mat-form-field>
+						</div>
+						<div class="col-md-6">
+							<mat-form-field appearance="fill">
+								<mat-label>Phone Number</mat-label>
+								<input matInput formControlName="phoneNumber" placeholder="e.g. 5551234567">
+								<mat-error *ngIf="userForm.controls.phoneNumber.touched && userForm.controls.phoneNumber.invalid">
+									<span *ngIf="userForm.controls.phoneNumber.errors.required">This field is mandatory.</span>
+									<span *ngIf="userForm.controls.phoneNumber.errors.pattern">This field is invalid.</span>
+								</mat-error>
+							</mat-form-field>
+						</div>
+					</div>
+
+					<mat-form-field class="form-field" appearance="outline">
+						<mat-label> E-mail
+						</mat-label>
+						<input matInput formControlName="email" required>
+						<mat-error *ngIf="userForm.controls.email.touched && userForm.controls.email.invalid">
+							<span *ngIf="userForm.controls.email.errors.required">This field is mandatory.</span>
+							<span *ngIf="userForm.controls.email.errors.pattern">This field is invalid.</span>
+						</mat-error>
+					</mat-form-field>
+
+					<!-- <button mat-raised-button color="primary" type="submit">Log In</button> -->
+
+					<div class="form-group">
+						<button type="submit" class="btn btn-primary">Register</button>
+						<button type="button" (click)="onReset()" class="btn btn-warning float-right">Reset</button>
+					</div>
+					
+				</form>
+
 			</div>
 
-			<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
-
-				<!--- Note that these columns can be defined in any order.
-        The actual rendered columns are set as a property on the row definition" -->
-
-				<!-- Position Column -->
-				
-
-				<!-- Name Column -->
-				<ng-container matColumnDef="name">
-					<th mat-header-cell *matHeaderCellDef mat-sort-header>
-						Name
-					</th>
-					<td mat-cell *matCellDef="let element"> {{element.name}} </td>
-				</ng-container>
-
-				<ng-container matColumnDef="phone">
-					<th mat-header-cell *matHeaderCellDef>
-						Phone
-					</th>
-					<td mat-cell *matCellDef="let element"> {{element.phone}} </td>
-				</ng-container>
-
-				<ng-container matColumnDef="type">
-					<th mat-header-cell *matHeaderCellDef>
-						Type
-					</th>
-					<td mat-cell *matCellDef="let element"> {{element.donation_type}}</td>
-				</ng-container>
-
-				<ng-container matColumnDef="quantity">
-					<th mat-header-cell *matHeaderCellDef>
-						Quantity
-					</th>
-					<td mat-cell *matCellDef="let element"> {{element.quantity}} </td>
-				</ng-container>
-
-				<!-- Symbol Column -->
-				
-
-				<ng-container matColumnDef="delete">
-					<th mat-header-cell *matHeaderCellDef>
-						Delete
-					</th>
-					<td mat-cell *matCellDef="let element">
-						<button (click)="removeSelectedRows(element.id)" mat-button color="warn">
-							<span class="material-icons">delete</span>
-						</button>
-					</td>
-				</ng-container>
-
-				<ng-container matColumnDef="update">
-					<th mat-header-cell *matHeaderCellDef>
-						Edit
-					</th>
-					<td mat-cell *matCellDef="let element">
-						<button (click)="editProduct(element.id)" mat-button color="primary">
-							<span class="material-icons">edit</span>
-						</button>
-					</td>
-				</ng-container>
-
-				<tr style="background-color: #030203c9;" mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-				<tr id="prdTableHover" mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-			</table>
-			<mat-paginator [length]="100" [pageSize]="5" [pageSizeOptions]="[5, 10, 25, 100]" aria-label="Select page">
-			</mat-paginator>
 		</div>
 	</div>
+
 </div>
