--- a/src/app/donation/register-donation/register-donation.component.html
+++ b/src/app/donation/register-donation/register-donation.component.html
@@ -12,7 +12,8 @@
 			<div class="top-table">
 				<input class="filter-prd-form" (keyup)="filterProductTable($event.target.value)"
 					placeholder="Search name">
-				<button (click)="addProduct()" class=" add-prd">Fait Donation</button>
+				<!-- <button (click)="addProduct()" class=" add-prd">Make a Donation</button> -->
+				<button mat-raised-button (click)="addProduct()">Make a Donation</button>
 			</div>
 
 			<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
