--- a/src/app/donation/register-donation/register-donation.component.html
+++ b/src/app/donation/register-donation/register-donation.component.html
@@ -13,7 +13,7 @@
 				<input class="filter-prd-form" (keyup)="filterProductTable($event.target.value)"
 					placeholder="Search name">
 				<!-- <button (click)="addProduct()" class=" add-prd">Make a Donation</button> -->
-				<button mat-raised-button (click)="addProduct()">Make a Donation</button>
+				<button mat-raised-button (click)="addDonation()">Make a Donation</button>
 			</div>
 
 			<table mat-table [dataSource]="dataSource" class="mat-elevation-z8" matSort>
