successfully added an angular material table with CRUD functionality, following an online tutorial

--- a/src/app/donation/manage-donation/dialogs/delete/delete.dialog.component.html
+++ b/src/app/donation/manage-donation/dialogs/delete/delete.dialog.component.html
@@ -3,11 +3,13 @@
   <div mat-dialog-content>
     Id: {{data.id}}
     <p></p>
-    Title: {{data.title}}
+    Name: {{data.name}}
     <p></p>
-    State: {{data.state}}
+    Phone: {{data.phone}}
     <p></p>
-    Url: {{data.url}}
+    Donation Type: {{data.donation_type}}
+    <p></p>
+    Quantity: {{data.quantity}}
     <p></p>
   </div>
 
