started using http client to update records in db for new angular material table CRUD

--- a/src/app/donation/manage-donation/manage-donation.component.html
+++ b/src/app/donation/manage-donation/manage-donation.component.html
@@ -64,7 +64,7 @@
           <mat-icon aria-label="Edit">edit</mat-icon>
         </button>
 
-        <button mat-icon-button color="accent" (click)="deleteItem(i, row.id, row.name, row.phone, row.donation_type)">
+        <button mat-icon-button color="accent" (click)="deleteItem(i, row.id, row.name, row.phone, row.donation_type, row.quantity)">
           <mat-icon aria-label="Delete">delete</mat-icon>
         </button>
       </mat-cell>
