--- a/src/app/donation/manage-donation-server-side/manage-donation-server-side.component.html
+++ b/src/app/donation/manage-donation-server-side/manage-donation-server-side.component.html
@@ -34,35 +34,45 @@
       [dataSource]="data"
       class="example-table"
       matSort
-      matSortActive="created"
+      matSortActive="quantity"
       matSortDisableClear
       matSortDirection="desc"
     >
       <!-- Number Column -->
-      <ng-container matColumnDef="number">
-        <th mat-header-cell *matHeaderCellDef>#</th>
-        <td mat-cell *matCellDef="let row">{{ row.number }}</td>
+      <ng-container matColumnDef="id">
+        <th mat-header-cell *matHeaderCellDef>ID</th>
+        <td mat-cell *matCellDef="let row">{{ row.id }}</td>
       </ng-container>
 
-      <!-- Title Column -->
-      <ng-container matColumnDef="title">
-        <th mat-header-cell *matHeaderCellDef>Title</th>
-        <td mat-cell *matCellDef="let row">{{ row.title }}</td>
+      <!-- name Column -->
+      <ng-container matColumnDef="name">
+        <th mat-header-cell *matHeaderCellDef>Name</th>
+        <td mat-cell *matCellDef="let row">{{ row.name }}</td>
       </ng-container>
 
-      <!-- State Column -->
-      <ng-container matColumnDef="state">
-        <th mat-header-cell *matHeaderCellDef>State</th>
-        <td mat-cell *matCellDef="let row">{{ row.state }}</td>
+      <!-- phone Column -->
+      <ng-container matColumnDef="phone">
+        <th mat-header-cell *matHeaderCellDef>Phone</th>
+        <td mat-cell *matCellDef="let row">{{ row.phone }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="donation_type">
+        <th mat-header-cell *matHeaderCellDef>Donation Type</th>
+        <td mat-cell *matCellDef="let row">{{ row.donation_type }}</td>
+      </ng-container>
+
+      <ng-container matColumnDef="quantity">
+        <th mat-header-cell *matHeaderCellDef>Quantity</th>
+        <td mat-cell *matCellDef="let row">{{ row.quantity }}</td>
       </ng-container>
 
       <!-- Created Column -->
-      <ng-container matColumnDef="created">
+      <!-- <ng-container matColumnDef="created">
         <th mat-header-cell *matHeaderCellDef mat-sort-header disableClear>
           Created
         </th>
         <td mat-cell *matCellDef="let row">{{ row.created_at | date }}</td>
-      </ng-container>
+      </ng-container> -->
 
       <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
       <tr mat-row *matRowDef="let row; columns: displayedColumns"></tr>
