getting server-side pagination to work for material table

--- a/src/app/donation/manage-donation-server-side/manage-donation-server-side.component.html
+++ b/src/app/donation/manage-donation-server-side/manage-donation-server-side.component.html
@@ -34,9 +34,9 @@
       [dataSource]="data"
       class="example-table"
       matSort
-      matSortActive="quantity"
+      matSortActive="id"
       matSortDisableClear
-      matSortDirection="desc"
+      matSortDirection="asc"
     >
       <!-- Number Column -->
       <ng-container matColumnDef="id">
@@ -85,4 +85,5 @@
     aria-label="Select page of GitHub search results"
     showFirstLastButtons
   ></mat-paginator>
+
 </div>
