--- a/src/app/donation/recipient/recipient.component.css
+++ b/src/app/donation/recipient/recipient.component.css
@@ -1,42 +1,60 @@
-table {
-  width: 100%;
-}
+/* Structure */
 
-.filter-prd-form {
-  min-width: 150px;
-  max-width: 300px;
-  width: 100%;
-  height: 40px;
-  text-decoration: none;
-  border-color: black;
-}
-
-.example-full-width {
-  width: 100%;
-}
-
-.add-prd {
-  height: 40px;
-  width: 80px;
-  border: none;
-  color: white;
-  background-color: #030203c9;
-  font-family: sans-serif;
-}
-
-.top-table {
+.container {
   display: flex;
+  flex-direction: column;
 }
 
-#prdTableHover:hover {
-  background-color: #050405c9;
+/* Toolbar */
+.spacer {
+  flex: 1 1 auto;
 }
 
-th {
-  color: white;
+/* Filter */
+.form {
+  min-height: 56px;
+  max-height: 56px;
+  display: flex;
+  align-items: center;
+  padding: 8px 24px 0;
+  font-size: 20px;
+  justify-content: space-between;
+  border-bottom: 1px solid transparent;
 }
 
-td {
-  color: white;
-  background-color: #110625c9;
+.mat-form-field {
+  font-size: 14px;
+  flex-grow: 1;
+  margin-top: 8px;
+}
+
+/* Mat table */
+.no-results {
+  display: flex;
+  justify-content: center;
+  padding: 14px;
+  font-size: 14px;
+  font-style: italic;
+}
+
+.mat-cell:nth-child(1),
+.mat-header-cell:nth-child(1){
+  flex: 0 0 6%;
+}
+
+.mat-cell:nth-child(2),
+.mat-header-cell:nth-child(2){
+  flex: 0 0 30%;
+}
+
+/* COMMENTING THIS, FIXES DISPLAY ISSUE THAT WAS REMOVING SPACES BETWEEN PHONE AND DONATION TYPE COLUMNS!!!!!!!! */
+
+/* .mat-cell:nth-child(3),
+.mat-header-cell:nth-child(3){
+  flex: 0 0 6%;
+} */
+
+.mat-cell:nth-child(7),
+.mat-header-cell:nth-child(7){
+  flex: 0 0 7%;
 }
