--- a/src/app/donation/recipient/recipient.component.html
+++ b/src/app/donation/recipient/recipient.component.html
@@ -11,7 +11,7 @@
 
   <div class="form">
     <mat-form-field floatPlaceholder="never" color="accent">
-      <input matInput #filter placeholder="Filter Donations">
+      <input matInput #filter placeholder="Filter Recipients">
     </mat-form-field>
   </div>
 
@@ -26,24 +26,34 @@
       <mat-cell *matCellDef="let row" >{{row.id}}</mat-cell>
     </ng-container>
 
-    <ng-container matColumnDef="name">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>Name</mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.name}}</mat-cell>
+    <ng-container matColumnDef="firstName">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>First Name</mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.firstName}}</mat-cell>
     </ng-container>
 
-    <ng-container matColumnDef="phone">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>Phone</mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.phone}}</mat-cell>
+    <ng-container matColumnDef="lastName">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Last Name</mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.lastName}}</mat-cell>
     </ng-container>
 
-    <ng-container matColumnDef="donation_type">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>Donation Type</mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.donation_type}}</mat-cell>
+    <ng-container matColumnDef="dateOfBirth">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>DOB</mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.dateOfBirth}}</mat-cell>
     </ng-container>
 
-    <ng-container matColumnDef="quantity">
-      <mat-header-cell *matHeaderCellDef mat-sort-header>Quantity</mat-header-cell>
-      <mat-cell *matCellDef="let row"> {{row.quantity}}</mat-cell>
+    <ng-container matColumnDef="gender">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Gender</mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.gender}}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="phoneNumber">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Phone Number</mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.phoneNumber}}</mat-cell>
+    </ng-container>
+
+    <ng-container matColumnDef="status">
+      <mat-header-cell *matHeaderCellDef mat-sort-header>Status</mat-header-cell>
+      <mat-cell *matCellDef="let row"> {{row.status}}</mat-cell>
     </ng-container>
 
     <!-- actions -->
