refacted and updated a lot of files to allow support for CRUD in recipient tab

--- a/src/app/donation/recipient/dialogs/delete/delete.dialog.component.html
+++ b/src/app/donation/recipient/dialogs/delete/delete.dialog.component.html
@@ -3,13 +3,17 @@
   <div mat-dialog-content>
     Id: {{data.id}}
     <p></p>
-    Name: {{data.name}}
+    First Name: {{data.firstName}}
     <p></p>
-    Phone: {{data.phone}}
+    Last Name: {{data.lastName}}
+        <p></p>
+    Dat of Birth: {{data.dateOfBirth}}
+        <p></p>
+    Gender: {{data.gender}}
     <p></p>
-    Donation Type: {{data.donation_type}}
+    Phone Number: {{data.phoneNumber}}
     <p></p>
-    Quantity: {{data.quantity}}
+    Status: {{data.status}}
     <p></p>
   </div>
 
