--- a/src/app/donation/recipient/dialogs/add/add.dialog.component.html
+++ b/src/app/donation/recipient/dialogs/add/add.dialog.component.html
@@ -13,7 +13,7 @@
     <!--Textarea for demo purposes-->
     <div class="form">
       <mat-form-field color="accent">
-        <textarea matInput #input class="form-control" placeholder="Name" [(ngModel)]="data.name" name="name" required ></textarea>
+        <textarea matInput #input class="form-control" placeholder="First Name" [(ngModel)]="data.firstName" name="firstName" required ></textarea>
         <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
       </mat-form-field>
     </div>
@@ -21,21 +21,62 @@
     <!--Contains mat-hint for characters count and has maxLengt set-->
     <div class="form">
       <mat-form-field color="accent">
-        <input matInput #inputstate class="form-control" placeholder="Phone" [(ngModel)]="data.phone" name="phone" maxlength="10" required >
+        <input matInput #inputstate class="form-control" placeholder="Last Name" [(ngModel)]="data.lastName" name="lastName" maxlength="30" required >
         <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
         <mat-hint align="end">{{inputstate.value?.length || 0}}/10</mat-hint>
       </mat-form-field>
     </div>
 
-    <div class="form">
+    <!-- <div class="form">
       <mat-form-field color="accent">
-        <input matInput placeholder="Donation Type" [(ngModel)]="data.donation_type" name="donation_type">
+        <input matInput placeholder="Date Of Birth" [(ngModel)]="data.dateOfBirth" name="dateOfBirth">
       </mat-form-field>
-    </div>
+    </div> -->
+
+    <mat-form-field appearance="fill" color="accent">
+      <mat-label>Date Of Birth</mat-label>
+      <input matInput [matDatepicker]="picker" [(ngModel)]="data.dateOfBirth" name="dateOfBirth">
+      <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+      <mat-datepicker #picker></mat-datepicker>
+    </mat-form-field>
 
     <div class="form">
       <mat-form-field color="accent">
-        <input matInput placeholder="Quantity" [(ngModel)]="data.quantity" name="quantity">
+        <input matInput placeholder="Gender" [(ngModel)]="data.gender" name="gender">
+      </mat-form-field>
+    </div>
+
+    <!-- <div class="form">
+      <mat-form-field>
+        <mat-label>Gender</mat-label>
+        <mat-select>
+          <mat-option *ngFor="let gen of gender; trackBy: trackItem" [value]="gen.value">
+            {{ gen.viewValue }}
+          </mat-option>
+        </mat-select>
+      </mat-form-field>
+    </div> -->
+    
+    <div class="form">
+      <mat-form-field color="accent">
+        <input matInput placeholder="Phone Number" [(ngModel)]="data.phoneNumber" name="phoneNumber">
+      </mat-form-field>
+    </div>
+
+    <!-- <div class="form">
+      <mat-form-field color="accent">
+        <input matInput placeholder="Status" [(ngModel)]="data.status" name="status">
+      </mat-form-field>
+    </div> -->
+
+    <div class="form">
+      <mat-form-field>
+        <mat-label>Status</mat-label>
+        <mat-select [(ngModel)]="data.status" name="status">
+          <mat-option *ngFor="let sts of status; trackBy: trackItem" [value]="sts.value">
+            {{ sts.viewValue }}
+          </mat-option>
+        </mat-select>
       </mat-form-field>
     </div>
 
