--- a/src/app/donation/recipient/dialogs/edit/edit.dialog.component.html
+++ b/src/app/donation/recipient/dialogs/edit/edit.dialog.component.html
@@ -13,29 +13,43 @@
     <!--Textarea for demo purposes-->
     <div class="form">
       <mat-form-field color="accent">
-        <textarea matInput #input class="form-control" placeholder="Name" [(ngModel)]="data.name" name="name" required ></textarea>
+        <textarea matInput #input class="form-control" placeholder="First Name" [(ngModel)]="data.firstName" name="firstName" required ></textarea>
         <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
       </mat-form-field>
+    </div>
+
+    <div class="form">
+      <mat-form-field color="accent">
+        <input matInput #inputstate class="form-control" placeholder="Last Name" [(ngModel)]="data.lastName" name="lastName" maxlength="30" required >
+        <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
+        <mat-hint align="end">{{inputstate.value?.length || 0}}/30</mat-hint>
+      </mat-form-field>
+    </div>
+
+    <div class="form">
+        <mat-form-field color="accent">
+          <input matInput placeholder="Date Of Birth" [(ngModel)]="data.dateOfBirth" name="dateOfBirth">
+        </mat-form-field>
+    </div>
+
+    <div class="form">
+        <mat-form-field color="accent">
+          <input matInput placeholder="Gender" [(ngModel)]="data.gender" name="gender">
+        </mat-form-field>
     </div>
 
     <!--Contains mat-hint for characters count and has maxLengt set-->
     <div class="form">
       <mat-form-field color="accent">
-        <input matInput #inputstate class="form-control" placeholder="Phone" [(ngModel)]="data.phone" name="phone" maxlength="10" required >
+        <input matInput #inputstate class="form-control" placeholder="Phone Number" [(ngModel)]="data.phoneNumber" name="phone" maxlength="10" required >
         <mat-error *ngIf="formControl.invalid">{{getErrorMessage()}}</mat-error>
         <mat-hint align="end">{{inputstate.value?.length || 0}}/10</mat-hint>
       </mat-form-field>
     </div>
 
     <div class="form">
-        <mat-form-field color="accent">
-          <input matInput placeholder="Donation Type" [(ngModel)]="data.donation_type" name="donation_type">
-        </mat-form-field>
-    </div>
-
-    <div class="form">
       <mat-form-field color="accent">
-        <input matInput placeholder="Quantity" [(ngModel)]="data.quantity" name="quantity">
+        <input matInput placeholder="Status" [(ngModel)]="data.status" name="status">
       </mat-form-field>
     </div>
 
